--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   
       <h2 class="section-title">.index()</h2>
       <span class="index-span"></span>
-      <ul>
+      <ul class="small-indents">
         <li class="index-li">Lorem ipsum dolor sit amet</li>
         <li class="index-li">Lorem ipsum dolor sit amet</li>
         <li class="index-li">Lorem ipsum dolor sit amet</li>
@@ -172,6 +172,16 @@
         <li class="index-li">Lorem ipsum dolor sit amet</li>
         <li class="index-li">Lorem ipsum dolor sit amet</li>
       </ul>
+      <div>
+        <button class="btn btn-remove-attr small-indents d-block">removeAttr</button>
+      </div>
+      <div class="d-flex align-items-center flex-column small-indents">
+        <img src="images/imag-delete.png" class="delete-img small-indents" alt="">
+        <button class="btn btn-remove">Remove this images</button>
+      </div>
+      <div class="d-flex justify-content-end">
+        <button class="btn btn-scroll-top">scrollTop()</button>
+      </div>
     </div>
   </section>
 
